--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,7 +1,86 @@
+@import "partials/colors.scss";
+@include foundation-everything;
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+  background: $white;
 }
-a {
-  color: #00B7FF;
+
+.sidebar-container{
+  background-color: $white;
+  box-shadow: 0 0 10px rgba(10, 10, 10, 1);
+
+  .title-container {
+    background-color:$secondary-color;
+    min-height: 55px;
+    max-height: 55px;
+
+    .title {
+      padding-top:0.2em;
+    }
+  }
+
+  .title > a {
+    color: $white;
+  }
+  .title > a:hover{
+    color:$white;
+    text-decoration: underline;
+  }
+
+  .menu {
+    a {
+      color:$light;
+    }
+    a:hover {
+      color:$white;
+    }
+    li:hover {
+      background-color: $dark;
+      border-left:5px solid $black;
+    }
+    li[active=true]{
+      border-left:5px solid $secondary-color;
+      background-color: $dark;
+      a {
+        color:$white;
+      }
+    }
+  }
+}
+
+.navigation-container{
+  min-height: 55px;
+}
+
+.empty-top-bar{
+  height: 55px;
+  background-color: $secondary-color;
+}
+
+.content-container{
+  padding:15px;
+
+  .card {
+    .card-main {
+      position:relative;
+
+      .card-title-container {
+        position: absolute;
+        background-color: rgba(34, 45, 50, 0.9);
+        width: 100%;
+        top: 1em;
+        padding-left: 0.5em;
+
+        a {
+          color:$light;
+        }
+
+        a:hover {
+          color:$white;
+        }
+      }
+
+    }
+  }
 }
