--- a/public/stylesheets/partials/colors.scss
+++ b/public/stylesheets/partials/colors.scss
@@ -7,7 +7,7 @@
 
 
 $primary-color: #468966;
-$primary-color: #8FB052;
+//$primary-color: #8FB052;
 $secondary-color: #FFF0A5;
 $secondary-color: #41525e;
 $third-color: #FFB03B;
