--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,57 +6,9 @@ body {
   background: $white;
 }
 
-.sidebar-container{
-  background-color: $white;
-  box-shadow: 0 0 10px rgba(10, 10, 10, 1);
+@import "partials/sideBar";
 
-  .title-container {
-    background-color:$secondary-color;
-    min-height: 55px;
-    max-height: 55px;
-
-    .title {
-      padding-top:0.2em;
-    }
-  }
-
-  .title > a {
-    color: $white;
-  }
-  .title > a:hover{
-    color:$white;
-    text-decoration: underline;
-  }
-
-  .menu {
-    a {
-      color:$light;
-    }
-    a:hover {
-      color:$white;
-    }
-    li:hover {
-      background-color: $dark;
-      border-left:5px solid $black;
-    }
-    li[active=true]{
-      border-left:5px solid $secondary-color;
-      background-color: $dark;
-      a {
-        color:$white;
-      }
-    }
-  }
-}
-
-.navigation-container{
-  min-height: 55px;
-}
-
-.empty-top-bar{
-  height: 55px;
-  background-color: $secondary-color;
-}
+@import "partials/navigation";
 
 .content-container{
   padding:15px;
