--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,6 @@
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <script src="/libs/jquery" type="text/javascript"></script>
 <script src="/libs/foundation/js/foundation.js" type="text/javascript"></script>
+<script src="/libs/awesome" type="text/javascript"></script>
 <script src="/js/main.js" type="text/javascript"></script>
+<script src="/javascripts/app-dashboard-layout.js" type="text/javascript"></script>
