--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,38 +2,43 @@
 <html>
 <head>
     <title><%= i18n('title') %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <% include partials/head.ejs %>
+    <%- head %>
 </head>
 <body>
-    <div class="grid-container full">
-        <div class="grid-y grid-frame">
-            <div class="cell small-12">
-                <div class="grid-x cell-block-y">
-                    <div class="cell medium-2 sidebar-container">
-                            <div class="title-container">
-                                <h3 class="text-center title"><a href="/"><%= i18n('title') %></a></h3>
-                            </div>
-                            <ul class="vertical menu">
-                                <% plugins.forEach(plugin => { %>
-                                <li <%= path === plugin.path?'active=true':''%>><a href="<%= plugin.path %>"><%= plugin.title %></a></li>
-                                <% }); %>
-                            </ul>
-                    </div>
-                    <div class="cell medium-10">
-                        <div class="grid-y">
-                            <div class="cell small-1 navigation-container">
-                                <%- navigation %>
-                            </div>
-                            <div class="cell small-11 content-container">
-                                <%- body %>
-                            </div>
-                        </div>
-                    </div>
+    <div class="app-dashboard shrink-medium">
+        <div class="grid-x app-dashboard-top-nav-bar">
+            <div class="cell medium-2 nav-bar-left">
+                <h3 class="title">
+                    <button data-toggle="app-dashboard-sidebar" class="menu-icon hide-for-medium"></button>
+                    <a href="/"><%= i18n('title') %></a>
+                </h3>
+            </div>
+            <div class="cell medium-8 <%=nav?'':'empty-top-bar'%>">
+                    <%- nav %>
+            </div>
+            <div class="cell shrink medium-2 app-dashboard-top-bar-actions <%=navRight?'':'empty-top-bar'%>">
+                <%- navRight %>
+            </div>
+        </div>
+
+        <div class="app-dashboard-body off-canvas-wrapper">
+            <div id="app-dashboard-sidebar" class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
+                <div class="app-dashboard-sidebar-inner">
+                    <ul class="vertical menu">
+                        <% plugins.forEach(plugin => { %>
+                        <li <%= path === plugin.path ? 'active=true' : '' %>><a href="<%= plugin.path %>"><%= plugin.title %></a></li>
+                        <% }); %>
+                    </ul>
                 </div>
+            </div>
+
+            <div class="app-dashboard-body-content off-canvas-content content-container" data-off-canvas-content>
+                <%- body %>
             </div>
         </div>
     </div>
-
 
 </body>
 </html>
